package(default_visibility = ["//visibility:public"])

load("@rules_pkg//:mappings.bzl", "pkg_filegroup")

alias(
    name = "dbscheme",
    actual = "@ql//cpp/ql/lib:dbscheme",
)

pkg_filegroup(
    name = "db-files",
    srcs = [
        ":dbscheme",
        "@ql//cpp/downgrades",
        "@ql//cpp/ql/lib:dbscheme-stats",
    ],
)
