load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")
load("@semmle_code//:dist.bzl", "dist", "pack_zip")
load("//:defs.bzl", "codeql_platform")

package(default_visibility = ["//visibility:public"])

alias(
    name = "dbscheme",
    actual = "//ruby/ql/lib:dbscheme",
)

alias(
    name = "dbscheme-stats",
    actual = "//ruby/ql/lib:dbscheme-stats",
)

pkg_files(
    name = "dbscheme-group",
    srcs = [
        ":dbscheme",
        ":dbscheme-stats",
    ],
    strip_prefix = None,
)

pkg_filegroup(
    name = "db-files",
    srcs = [
        ":dbscheme-group",
        "//ruby/downgrades",
    ],
)

pkg_files(
    name = "codeql-extractor-yml",
    srcs = ["codeql-extractor.yml"],
    strip_prefix = None,
)

dist(
    name = "extractor-generic",
    srcs = [
        ":codeql-extractor-yml",
        ":dbscheme-group",
        "//ruby/downgrades",
        "//ruby/tools",
    ],
    prefix = "ruby",
    visibility = ["//visibility:public"],
)

pack_zip(
    name = "extractor-arch",
    srcs = [
        "//ruby/extractor",
    ],
    package_file_name = "extractor-" + codeql_platform + ".zip",
    prefix = "ruby/tools/" + codeql_platform,
    visibility = ["//visibility:public"],
)
