load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup")
load(
    "//misc/bazel:pkg.bzl",
    "codeql_pack",
    "codeql_pkg_files",
    "codeql_pkg_runfiles",
)
load("//misc/bazel:utils.bzl", "select_os")

filegroup(
    name = "schema",
    srcs = ["schema.py"],
    visibility = ["//swift:__subpackages__"],
)

filegroup(
    name = "schema_includes",
    srcs = glob(["*.dbscheme"]),
    visibility = ["//swift:__subpackages__"],
)

filegroup(
    name = "codegen_conf",
    srcs = ["codegen.conf"],
    visibility = ["//swift:__subpackages__"],
)

codeql_pkg_files(
    name = "autobuilder-incompatible-os",
    exes = ["//swift/tools/diagnostics:autobuilder-incompatible-os"],
)

codeql_pkg_runfiles(
    name = "autobuilder-files",
    exes = ["//swift/swift-autobuilder"],
)

pkg_filegroup(
    name = "autobuilder",
    srcs = select_os(
        macos = [
            ":autobuilder-files",
        ],
        otherwise = [
            ":autobuilder-incompatible-os",
        ],
    ),
    prefix = "tools/{CODEQL_PLATFORM}",
)

pkg_filegroup(
    name = "extractor",
    srcs = select_os(
        posix = [
            "//swift/extractor:pkg",
        ],
    ),
    prefix = "tools/{CODEQL_PLATFORM}",
)

codeql_pkg_files(
    name = "root-files",
    srcs = [
        "codeql-extractor.yml",
        "ql/lib/swift.dbscheme.stats",
        "//swift/extractor/trap:generated_dbscheme",
    ],
)

pkg_filegroup(
    name = "common",
    srcs = [
        ":autobuilder",
        ":root-files",
        "//swift/downgrades",
    ],
)

zip_map = {
    "//swift/third_party/resources:dir": "resource-dir/{CODEQL_PLATFORM}",
}

[
    codeql_pack(
        name = "swift-linux-included" if linux_included else "swift",
        srcs = [
            ":common",
        ] + select_os(
            linux = [":extractor"] if linux_included else [],
            macos = [":extractor"],
            windows = [],
        ),
        installer_alias = "install-linux" if linux_included else "install-other",
        zips = select_os(
            linux = zip_map if linux_included else {},
            macos = zip_map,
            windows = {},
        ),
    )
    for linux_included in [
        True,
        False,
    ]
]

alias(
    name = "create-extractor-pack",
    actual = ":swift-installer",
)

alias(
    name = "install",
    actual = select_os(
        linux = ":install-linux",
        otherwise = ":install-other",
    ),
)
