load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files")

pkg_files(
    name = "executables",
    srcs = glob(["*.sh"]),
    attributes = pkg_attributes(mode = "0755"),
)

pkg_files(
    name = "non-executables",
    srcs = glob(
        ["*"],
        exclude = [
            "*.sh",
            "BUILD.bazel",
        ],
    ),
)

pkg_filegroup(
    name = "codeql-tools",
    srcs = [
        ":executables",
        ":non-executables",
    ],
    prefix = "tools",
    visibility = ["//go:__pkg__"],
)
