load("@rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/github/codeql-go/extractor

go_library(
    name = "extractor",
    srcs = [
        "extractor.go",
        "gomodextractor.go",
        "semaphore.go",
    ],
    importpath = "github.com/github/codeql-go/extractor",
    visibility = ["//visibility:public"],
    deps = [
        "//go/extractor/dbscheme",
        "//go/extractor/diagnostics",
        "//go/extractor/srcarchive",
        "//go/extractor/trap",
        "//go/extractor/util",
        "//go/extractor/vendor/golang.org/x/mod/modfile",
        "//go/extractor/vendor/golang.org/x/tools/go/packages",
    ],
)
